--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "friend-finder",
   "version": "1.0.0",
   "description": "dating app",
-  "main": "home.html",
+  "main": "server.js",
+   "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
